--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@ html, body {
   height: 100vh;
 }
 
-.App {
+.app {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
@@ -14,6 +14,6 @@ html, body {
     "f";
 }
 
-.AppContent {
+.appContent {
   grid-area: b;
 }
